--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
     <title>Welcome to pyFitsidi &mdash; pyFITS IDI v0.1 documentation</title>
-    <link rel="stylesheet" href="_static/default.css" type="text/css" />
-    <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="default.css" type="text/css" />
+    <link rel="stylesheet" href="pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
@@ -19,9 +19,9 @@
         HAS_SOURCE:  true
       };
     </script>
-    <script type="text/javascript" src="_static/jquery.js"></script>
-    <script type="text/javascript" src="_static/underscore.js"></script>
-    <script type="text/javascript" src="_static/doctools.js"></script>
+    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="underscore.js"></script>
+    <script type="text/javascript" src="doctools.js"></script>
     <link rel="top" title="pyFITS IDI v0.1 documentation" href="#" /> 
   </head>
   <body>
@@ -59,7 +59,7 @@
 <p>pyFitsidi is a python module that creates FITS IDI files.</p>
 <p>pyFitsidi is a collection of functions that create headers and data units that conform to the FITS-IDI convention. It was written primarily to convert data from a CASPER correlator into a format that can be imported into data reduction packages such as AIPS++ and CASA.</p>
 <div class="figure align-center">
-<img alt="The Northern Cross, Medicina" src="_images/medicina.jpg" />
+<img alt="The Northern Cross, Medicina" src="/medicina.jpg" />
 <p class="caption">The Northern Cross, Medicina, Italy. Photo by G. Foster.</p>
 </div>
 </div>
@@ -974,7 +974,7 @@ Value returned in range (0,2pi)</p>
 
   <h3>This Page</h3>
   <ul class="this-page-menu">
-    <li><a href="_sources/index.txt"
+    <li><a href="/index.txt"
            rel="nofollow">Show Source</a></li>
   </ul>
 <div id="searchbox" style="display: none">
