Fixed broken link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <p>pyFitsidi is a python module that creates FITS IDI files.</p>
 <p>pyFitsidi is a collection of functions that create headers and data units that conform to the FITS-IDI convention. It was written primarily to convert data from a CASPER correlator into a format that can be imported into data reduction packages such as AIPS++ and CASA.</p>
 <div class="figure align-center">
-<img alt="The Northern Cross, Medicina" src="/medicina.jpg" />
+<img alt="The Northern Cross, Medicina" src="medicina.jpg" />
 <p class="caption">The Northern Cross, Medicina, Italy. Photo by G. Foster.</p>
 </div>
 </div>
